[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
derive_more = { version = "=2.0.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
rust_decimal = { version = "1.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[[bin]]
name = "payments-engine"
path = "src/main.rs"
