[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
derive_more = { version = "=2.0.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
lru = "0.12"
memory-stats = "=1.2.0"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[lib]
name = "payment_engine"
path = "src/lib.rs"

[[bin]]
name = "payments-engine"
path = "src/bin/payment-engine.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
